sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value b
  b=0
  ^AlgBubbleSort2:7: error: not found: value b
    for (i<- 0 to getNombreValeurs()-2-b){
                                       ^AlgBubbleSort2:11: error: not found: value b
        b=b+1
        ^